# Garmin-TN-MCP

./: .gitignore  LICENSE  LICENSE.ru.md  README.md  README.ru.md  probe_catalog_timing.py  pyproject.toml  today_lactate.json
garmin_raw/: __init__.py  aggregate.py  auth.py  backend.py  coros_auth_probe.py  coros_client.py  coros_fetch.py  coros_limit_probe.py  enrich.py  export.py  fetch.py  install.py  net_tools.py  netguard.py  probe_range.py  profiles.py  server.py  server_enriched.py  sport_taxonomy.py  store.py  sync.py  tools.py
tests/: test_argv_safety.py  test_biomech_source.py  test_cache_only.py  test_enrich.py  test_enrich_fetch.py  test_enriched_mcp.py  test_gps_type.py  test_integration.py  test_netguard.py  test_ref_lint.py  test_sport_taxonomy.py  test_sync_catalog.py  test_sync_estimate.py  test_sync_retry_auth.py  test_wellness.py
