[project]
name = "garmin-raw"
version = "0.1.0"
description = "Минимальный сырьевой доступ к Garmin Connect для тренировочного анализа (MCP + экспорт)"
requires-python = ">=3.10"
dependencies = [
    "garminconnect>=0.3.0",
    "mcp>=1.2.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
]

[project.scripts]
garmin-raw-auth = "garmin_raw.auth:main"
garmin-raw-export = "garmin_raw.export:main"
garmin-raw-mcp = "garmin_raw.server:main"
garmin-raw-install = "garmin_raw.install:main"
garmin-raw-uninstall = "garmin_raw.install:uninstall"
garmin-tn-mcp = "garmin_raw.server_enriched:main"
garmin-tn-install = "garmin_raw.install:install_tn"
garmin-tn-uninstall = "garmin_raw.install:uninstall_tn"
tn-install = "garmin_raw.install:install_tn"
tn-uninstall = "garmin_raw.install:uninstall_tn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
